2011-03-01  Aaron Landwehr <snaphat@gmail.com>

	* libm/complex/cproj.c: Fix typo.
	* libm/complex/cprojf.c: Ditto.

2011-02-22  Corinna Vinschen  <vinschen@redhat.com>

	* libc/stdio/fmemopen.c (fmemopen): Fix EINVAL condition.  Avoid SEGV
	if incoming buffer is NULL.

2011-02-09  Eric Blake  <eblake@redhat.com>

	* libc/include/string.h (strerror_r): Update declaration.
	* libc/string/strerror.c (strerror): Update documentation.
	* libc/string/strerror_r.c (strerror_r): Always return
	NUL-terminated string; don't overwrite too-short buf.
	* libc/string/xpg_strerror_r.c (__xpg_strerror_r): Implement POSIX
	variant.
	* libc/string/Makefile.am (GENERAL_SOURCES): Build new file.
	* libc/string/Makefile.in: Regenerate.

2011-01-28  Corinna Vinschen  <vinschen@redhat.com>

	* libc/stdio/fclose.c: Only use sfp lock to guard non-atomic
	changes of flags and fp lock.
	* libc/stdio/freopen.c: Ditto.
	* libc/stdio64/freopen64.c: Ditto.
	* libc/stdio/fgetc.c: Revert change from 2009-04-24, remove sfp locks
	which guard entire function to avoid potential deadlocks when using
	stdio functions in multiple thraeds.
	* libc/stdio/fgets.c: Ditto.
	* libc/stdio/fgetwc.c: Ditto.
	* libc/stdio/fgetws.c: Ditto.
	* libc/stdio/fread.c: Ditto.
	* libc/stdio/fseek.c: Ditto.
	* libc/stdio/getc.c: Ditto.
	* libc/stdio/getdelim.c: Ditto.
	* libc/stdio/gets.c: Ditto.
	* libc/stdio/vfscanf.c: Ditto.
	* libc/stdio/vfwscanf.c: Ditto.

	* libc/stdio/fflush.c (_fflush_r): Split out core functionality into
	new function __sflush_r.  Just lock file and call __sflush_r from here.
	* libc/stdio/fwalk.c (_fwalk): Remove static helper function and move
	functionality back into main function. Don't walk a file with flags
	value of 1.  Add comment.
	(_fwalk_reent): Ditto.
	* libc/stdio/local.h (__sflush_r): Declare.
	* libc/stdio/refill.c (__srefill): Before calling fwalk, set flags
	value to 1 so this file pointer isn't walked.  Revert flags afterwards